2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: prepend_text() calls prepend().

	* gtk/gtkmm/comboboxtext.cc: prepend_text() calls prepend() instead of
	append(). Bug #650673.

2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: Fix deprecation comment and inconsistent ifdefs.

	* gtk/gtkmm/comboboxtext.h: Change comment for deprecated clear(): Use
	remove_all() instead of equally deprecated clear_items().
	* gtk/gtkmm/comboboxtext.cc: clear_items() is guarded by
	GTKMM_DISABLE_DEPRECATED, as in comboboxtext.h. Bug #650673.

2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: Fix a typo.

	* gtk/gtkmm/comboboxtext.cc: Replace has_model by has_entry. Bug #650673.

2011-02-22  Murray Cumming  <murrayc@murrayc-desktop>

	Gdk::Rectangle: Added reference documentation.

	* gdk/src/rectangle.hg: Add doxygen comments based on the documentation of 
	the C API.
	
2.24.0:

2011-02-08  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxText, ComboBoxEntryText: Add warning about not confusing these.

	* gtk/gtkmm/comboboxentrytext.h:
	* gtk/gtkmm/comboboxtext.h: Add a doxygen comment warning people not to 
	call set_model() on these or to pack more cells in.

2.23.91:

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Button: undeprecated the clicked() method.

	* gtk/src/button.hg: gtk_button_clicked() is not deprecated. Fix that 
	mistake.
	Thanks to Aurimas Černius.

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Image: Added constructor and a const-correct set(IconSet, size) method.

	* gtk/src/image.[hg|ccg]: set(IconSet, size): Deprecate the existing one 
	because it takes a non-const IconSet&, adding a correct method overload.
	Likewise, deprecate and replace the corresponding constructor.
	We use IconSet via RefPtr in gtkmm 3 anyway, so we have already fixed this 
	problem there.

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Pixbuf: Minor documentation improvement.
