@@ -1,5 +1,12 @@
 2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
+	ComboBoxText: Ctors call set_entry_text_column() when has_entry is true.
+
+	* gtk/gtkmm/comboboxtext.cc: Constructors call set_entry_text_column()
+	instead of pack_start(), when has_entry is true. Bug #650673.
+
+2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
 	ComboBoxText: prepend_text() calls prepend().
 
 	* gtk/gtkmm/comboboxtext.cc: prepend_text() calls prepend() instead of
